k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-management
  namespace: employee-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: employee-management
  template:
    metadata:
      labels:
        app: employee-management
    spec:
      containers:
        - name: employee-management
          image: vinodb48/employee-management:14
          ports:
            - containerPort: 8080
