k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee-management
  namespace: employee-app
spec:
  selector:
    app: employee-management
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
